--- a/Foodzi/Foodzi/Base.lproj/Main.storyboard
+++ b/Foodzi/Foodzi/Base.lproj/Main.storyboard
@@ -19,12 +19,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Foodzi" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YM7-dH-hVT">
-                                <rect key="frame" x="0.0" y="25" width="375" height="51.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="43"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Ai-Vj-Qem">
                                 <rect key="frame" x="0.0" y="632" width="375" height="30"/>
                                 <state key="normal" title="Add New Recipe"/>
@@ -32,17 +26,17 @@
                                     <action selector="addNewRecipe:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tnO-MX-uuk"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meal History" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kkr-lt-8jc">
-                                <rect key="frame" x="0.0" y="86.5" width="375" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meal History" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kkr-lt-8jc">
+                                <rect key="frame" x="0.0" y="87" width="375" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="J58-fw-LNU">
-                                <rect key="frame" x="10" y="110.5" width="355" height="516.5"/>
+                                <rect key="frame" x="10" y="111" width="355" height="516"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="bigz" rowHeight="70" id="7qB-7s-GVM" customClass="RecipeTableViewCell" customModule="Foodzi" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="bigz" rowHeight="70" id="7qB-7s-GVM" customClass="RecipeTableViewCell" customModule="Foodzi" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="355" height="70"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="7qB-7s-GVM" id="SR0-G8-SQK">
@@ -56,8 +50,11 @@
                                                         <constraint firstAttribute="width" constant="60" id="yV6-nI-Dtc"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SDv-wF-jVk">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SDv-wF-jVk">
                                                     <rect key="frame" x="80" y="11" width="177" height="48"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="177" id="iGq-Gv-Bry"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -89,20 +86,26 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="r0l-hL-klc">
+                                <rect key="frame" x="16" y="20" width="343" height="59"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="59" id="HG4-t2-9hV"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="kkr-lt-8jc" firstAttribute="top" secondItem="r0l-hL-klc" secondAttribute="bottom" constant="7.5" id="8zd-xR-6iu"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="J58-fw-LNU" secondAttribute="trailing" constant="10" id="DtI-L7-NYy"/>
                             <constraint firstItem="kkr-lt-8jc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="GGR-GF-2OR"/>
+                            <constraint firstItem="r0l-hL-klc" firstAttribute="centerX" secondItem="kkr-lt-8jc" secondAttribute="centerX" id="KCi-Ic-aMV"/>
                             <constraint firstItem="5Ai-Vj-Qem" firstAttribute="top" secondItem="J58-fw-LNU" secondAttribute="bottom" constant="5" id="Lpp-3W-n2a"/>
-                            <constraint firstItem="kkr-lt-8jc" firstAttribute="top" secondItem="YM7-dH-hVT" secondAttribute="bottom" constant="10" id="MZp-EC-ohx"/>
-                            <constraint firstItem="YM7-dH-hVT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="XAt-ds-KEy"/>
-                            <constraint firstItem="YM7-dH-hVT" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="5" id="bJg-Av-3wW"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="YM7-dH-hVT" secondAttribute="trailing" id="bvd-Fr-Eu3"/>
+                            <constraint firstItem="r0l-hL-klc" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="dsx-dH-4CN"/>
                             <constraint firstItem="5Ai-Vj-Qem" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="fcg-h1-lPT"/>
                             <constraint firstItem="J58-fw-LNU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="i7M-vj-35P"/>
                             <constraint firstItem="J58-fw-LNU" firstAttribute="top" secondItem="kkr-lt-8jc" secondAttribute="bottom" constant="3" id="oJB-4x-RHj"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="kkr-lt-8jc" secondAttribute="trailing" id="tuh-uO-c2Y"/>
+                            <constraint firstItem="r0l-hL-klc" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="xCH-cc-axb"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="5Ai-Vj-Qem" secondAttribute="trailing" id="xio-Fd-mtc"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="5Ai-Vj-Qem" secondAttribute="bottom" constant="5" id="zu6-Vs-s9Q"/>
                         </constraints>
@@ -162,7 +165,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="LVr-So-JuV" customClass="DirectionTableViewCell" customModule="Foodzi" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="LVr-So-JuV" customClass="DirectionTableViewCell" customModule="Foodzi" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="343" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="LVr-So-JuV" id="yij-V9-dXY" customClass="DirectionTableViewCell" customModule="Foodzi" customModuleProvider="target">
@@ -193,7 +196,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="Jge-Up-fgz">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="Jge-Up-fgz">
                                         <rect key="frame" x="0.0" y="28" width="343" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Jge-Up-fgz" id="KDX-SM-bqC" customClass="IngredientTableViewCell" customModule="Foodzi" customModuleProvider="target">
@@ -266,7 +269,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="80N-6X-VSA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="116" y="809.14542728635683"/>
+            <point key="canvasLocation" x="151" y="872"/>
         </scene>
         <!--Recipe Steps View Controller-->
         <scene sceneID="fOb-ad-LVm">
@@ -332,7 +335,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xaM-He-jhn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="116" y="1539.5802098950526"/>
+            <point key="canvasLocation" x="151" y="1650"/>
         </scene>
         <!--New Recipe View Controller-->
         <scene sceneID="aNb-8C-YCy">
@@ -426,6 +429,9 @@
             <point key="canvasLocation" x="1680.8" y="112.89355322338831"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Logo" width="740" height="324"/>
+    </resources>
     <inferredMetricsTieBreakers>
         <segue reference="OZa-pQ-o81"/>
     </inferredMetricsTieBreakers>
