changed step counter

--- a/Foodzi/Foodzi/Base.lproj/Main.storyboard
+++ b/Foodzi/Foodzi/Base.lproj/Main.storyboard
@@ -427,6 +427,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="OZa-pQ-o81"/>
+        <segue reference="r1H-gb-nXD"/>
     </inferredMetricsTieBreakers>
 </document>
