--- a/Foodzi/Foodzi/Base.lproj/Main.storyboard
+++ b/Foodzi/Foodzi/Base.lproj/Main.storyboard
@@ -27,20 +27,20 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meal History" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kkr-lt-8jc">
-                                <rect key="frame" x="0.0" y="87" width="375" height="21"/>
+                                <rect key="frame" x="16" y="87" width="343" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="J58-fw-LNU">
-                                <rect key="frame" x="10" y="111" width="355" height="516"/>
+                                <rect key="frame" x="16" y="111" width="343" height="516"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="bigz" rowHeight="70" id="7qB-7s-GVM" customClass="RecipeTableViewCell" customModule="Foodzi" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="355" height="70"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="bigz" rowHeight="70" id="7qB-7s-GVM" customClass="RecipeTableViewCell" customModule="Foodzi" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="343" height="70"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="7qB-7s-GVM" id="SR0-G8-SQK">
-                                            <rect key="frame" x="0.0" y="0.0" width="355" height="69.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="69.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LYf-oi-Dkf">
@@ -59,8 +59,8 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ECI-Us-gIs">
-                                                    <rect key="frame" x="307" y="11" width="38" height="48"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ECI-Us-gIs">
+                                                    <rect key="frame" x="290" y="10" width="38" height="48"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -68,13 +68,15 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="SDv-wF-jVk" firstAttribute="leading" secondItem="LYf-oi-Dkf" secondAttribute="trailing" constant="20" id="1uf-8G-iLr"/>
-                                                <constraint firstItem="ECI-Us-gIs" firstAttribute="trailing" secondItem="SR0-G8-SQK" secondAttribute="trailingMargin" constant="5" id="8nX-TN-WwA"/>
-                                                <constraint firstItem="ECI-Us-gIs" firstAttribute="top" secondItem="SR0-G8-SQK" secondAttribute="topMargin" id="9Ea-sR-meq"/>
+                                                <constraint firstItem="ECI-Us-gIs" firstAttribute="centerY" secondItem="SR0-G8-SQK" secondAttribute="centerY" id="7Al-xc-spl"/>
                                                 <constraint firstItem="SDv-wF-jVk" firstAttribute="top" secondItem="SR0-G8-SQK" secondAttribute="topMargin" id="COm-Tr-HNO"/>
+                                                <constraint firstItem="ECI-Us-gIs" firstAttribute="leading" secondItem="SDv-wF-jVk" secondAttribute="trailing" constant="33" id="Lzz-pA-BZn"/>
                                                 <constraint firstItem="LYf-oi-Dkf" firstAttribute="top" secondItem="SR0-G8-SQK" secondAttribute="top" id="Qdw-06-7d9"/>
                                                 <constraint firstItem="SDv-wF-jVk" firstAttribute="bottom" secondItem="SR0-G8-SQK" secondAttribute="bottomMargin" id="TwV-BL-cb7"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="ECI-Us-gIs" secondAttribute="bottom" id="ivq-Ot-AjB"/>
+                                                <constraint firstItem="SDv-wF-jVk" firstAttribute="centerY" secondItem="SR0-G8-SQK" secondAttribute="centerY" id="WYp-Ie-yD7"/>
                                                 <constraint firstItem="LYf-oi-Dkf" firstAttribute="leading" secondItem="SR0-G8-SQK" secondAttribute="leading" id="jvR-qM-ei1"/>
+                                                <constraint firstItem="SDv-wF-jVk" firstAttribute="bottom" secondItem="SR0-G8-SQK" secondAttribute="bottomMargin" id="kCL-hE-joX"/>
+                                                <constraint firstItem="ECI-Us-gIs" firstAttribute="top" secondItem="SR0-G8-SQK" secondAttribute="topMargin" constant="-21" id="lfR-kH-sRd"/>
                                                 <constraint firstItem="LYf-oi-Dkf" firstAttribute="centerY" secondItem="SR0-G8-SQK" secondAttribute="centerY" constant="-4.75" id="taj-F5-pnA"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -95,17 +97,17 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="kkr-lt-8jc" firstAttribute="top" secondItem="r0l-hL-klc" secondAttribute="bottom" constant="7.5" id="8zd-xR-6iu"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="J58-fw-LNU" secondAttribute="trailing" constant="10" id="DtI-L7-NYy"/>
-                            <constraint firstItem="kkr-lt-8jc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="GGR-GF-2OR"/>
-                            <constraint firstItem="r0l-hL-klc" firstAttribute="centerX" secondItem="kkr-lt-8jc" secondAttribute="centerX" id="KCi-Ic-aMV"/>
-                            <constraint firstItem="5Ai-Vj-Qem" firstAttribute="top" secondItem="J58-fw-LNU" secondAttribute="bottom" constant="5" id="Lpp-3W-n2a"/>
+                            <constraint firstItem="J58-fw-LNU" firstAttribute="top" secondItem="kkr-lt-8jc" secondAttribute="bottom" constant="3" id="4Xf-j0-ybs"/>
+                            <constraint firstItem="J58-fw-LNU" firstAttribute="leading" secondItem="kkr-lt-8jc" secondAttribute="leading" id="DnE-NW-ixC"/>
+                            <constraint firstItem="kkr-lt-8jc" firstAttribute="top" secondItem="r0l-hL-klc" secondAttribute="bottom" constant="8" symbolic="YES" id="H1p-Lu-6wR"/>
+                            <constraint firstItem="kkr-lt-8jc" firstAttribute="leading" secondItem="r0l-hL-klc" secondAttribute="leading" id="HHh-DY-UMe"/>
+                            <constraint firstItem="kkr-lt-8jc" firstAttribute="trailing" secondItem="r0l-hL-klc" secondAttribute="trailing" id="Rg0-Ni-sxg"/>
                             <constraint firstItem="r0l-hL-klc" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="dsx-dH-4CN"/>
                             <constraint firstItem="5Ai-Vj-Qem" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="fcg-h1-lPT"/>
-                            <constraint firstItem="J58-fw-LNU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="i7M-vj-35P"/>
-                            <constraint firstItem="J58-fw-LNU" firstAttribute="top" secondItem="kkr-lt-8jc" secondAttribute="bottom" constant="3" id="oJB-4x-RHj"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="kkr-lt-8jc" secondAttribute="trailing" id="tuh-uO-c2Y"/>
+                            <constraint firstItem="J58-fw-LNU" firstAttribute="centerX" secondItem="5Ai-Vj-Qem" secondAttribute="centerX" id="lkG-dl-nR4"/>
+                            <constraint firstItem="5Ai-Vj-Qem" firstAttribute="top" secondItem="J58-fw-LNU" secondAttribute="bottom" constant="5" id="n9T-Lr-F94"/>
                             <constraint firstItem="r0l-hL-klc" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="xCH-cc-axb"/>
+                            <constraint firstItem="J58-fw-LNU" firstAttribute="trailing" secondItem="kkr-lt-8jc" secondAttribute="trailing" id="xcp-H3-6sv"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="5Ai-Vj-Qem" secondAttribute="trailing" id="xio-Fd-mtc"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="5Ai-Vj-Qem" secondAttribute="bottom" constant="5" id="zu6-Vs-s9Q"/>
                         </constraints>
@@ -143,6 +145,9 @@
                                 <state key="normal" title="+"/>
                                 <connections>
                                     <action selector="addIngredient:" destination="ubw-DC-vaC" eventType="touchUpInside" id="Dh6-gc-7LM"/>
+                                    <segue destination="QeF-jS-6xV" kind="popoverPresentation" popoverAnchorView="EWK-wR-CtV" id="64d-Us-k3a">
+                                        <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                                    </segue>
                                 </connections>
                             </button>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" translatesAutoresizingMaskIntoConstraints="NO" id="cL5-7D-UxG">
@@ -270,6 +275,59 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="80N-6X-VSA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="151" y="872"/>
+        </scene>
+        <!--Add Ingredients View Controller-->
+        <scene sceneID="fVv-kG-4lT">
+            <objects>
+                <viewController id="QeF-jS-6xV" customClass="AddIngredientsViewController" customModule="Foodzi" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Lx3-tZ-P1o">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Amount" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dTr-FG-zPX">
+                                <rect key="frame" x="16" y="172" width="343" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Ingredient" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CG9-Lz-8ZG">
+                                <rect key="frame" x="16" y="134" width="343" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Add Ingredient" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pLn-9q-skw">
+                                <rect key="frame" x="131" y="82" width="113" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7bM-x5-Evl">
+                                <rect key="frame" x="151" y="432" width="72" height="27"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="Add"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O3h-us-JyU">
+                                <rect key="frame" x="16" y="20" width="48" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Cancel"/>
+                                <connections>
+                                    <segue destination="xAm-FV-xRg" kind="unwind" unwindAction="myUnwindActionAddIngredientsToReviewReceipeWithUnwindSegue:" id="Po1-ZR-csN"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="ygE-RA-Id7"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wnz-6n-O4f" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="xAm-FV-xRg" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="1278" y="768"/>
         </scene>
         <!--Recipe Steps View Controller-->
         <scene sceneID="fOb-ad-LVm">
@@ -433,6 +491,6 @@
         <image name="Logo" width="740" height="324"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="r1H-gb-nXD"/>
+        <segue reference="OZa-pQ-o81"/>
     </inferredMetricsTieBreakers>
 </document>
