--- a/Foodzi/Foodzi/Base.lproj/Main.storyboard
+++ b/Foodzi/Foodzi/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Qax-65-B46">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -77,7 +77,7 @@
                                 </subviews>
                             </stackView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="ZSe-2d-ISP">
-                                <rect key="frame" x="12" y="36" width="351" height="112"/>
+                                <rect key="frame" x="12" y="70" width="351" height="112"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="112" id="7IJ-nl-eSI"/>
                                 </constraints>
@@ -85,7 +85,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="ZSe-2d-ISP" firstAttribute="top" secondItem="vsJ-4Q-Tgv" secondAttribute="top" constant="16" id="55T-ag-D7s"/>
+                            <constraint firstItem="ZSe-2d-ISP" firstAttribute="top" secondItem="vsJ-4Q-Tgv" secondAttribute="top" constant="50" id="55T-ag-D7s"/>
                             <constraint firstItem="vsJ-4Q-Tgv" firstAttribute="trailing" secondItem="ZSe-2d-ISP" secondAttribute="trailing" constant="12" id="FWw-rh-ReG"/>
                             <constraint firstItem="ZSe-2d-ISP" firstAttribute="leading" secondItem="vsJ-4Q-Tgv" secondAttribute="leading" constant="12" id="MpJ-RQ-XR5"/>
                             <constraint firstItem="vsJ-4Q-Tgv" firstAttribute="trailing" secondItem="zAs-CC-ed3" secondAttribute="trailing" constant="35" id="WVV-pj-2ot"/>
